https://github.com/stanleyshensantos/alura_books-projeto_inicial

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
   </nav>
   <section class="livros wrap" id="livros">
-   <!--  <div class="livro">
+    <!--  <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
         Cangaceiro JavaScript:
@@ -263,7 +263,7 @@
       </div>
     </div>-->
 
-  </section> 
+  </section>
   <section id="valor_total_livros_disponiveis">
     <div class="livros__disponiveis">
       <p>Todos os livros disponíveis por R$ <span id="valor">299,00</span></p>
@@ -275,6 +275,9 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
   <script src="app/main.js"></script>
+  <script src="app/metodoForEach.js"></script>
+  <script src="app/metodoMap.js"></script>
+  <script src="app/metodoFilter.js"></script>
 </body>
 
 </html>
